text & picture alignment(main) correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,12 @@ header section {
     background-image: linear-gradient(to bottom left, lightblue, blue, rgb(192, 30, 233));
     text-align: center;
     color: #ffffff;
-    margin: 50px 550px;
+    margin: 50px auto;
     padding: 10px 25px;
     height: 13em;
     width: 16em;
     background-size: 100% auto;
-    background-position-x:center;
+    background-position-x: center;
     background-position-y: center;
 }
 
@@ -105,10 +105,16 @@ main article p:nth-of-type(2) {
     margin: 25px 50px 0 0;
 }
 
+main section {
+    margin: 0 15%;
+    width: 40%;
+    text-align: left;
+}
+
 /* _______________Example-Section_________________ */
 
 main section:nth-of-type(1) img {
-    margin: 300px 0px 45px 0px;
+    margin: 300px auto 45px auto;
     border-radius: 15px 15px;
 }
 
@@ -119,10 +125,12 @@ main section:nth-of-type(1) h1 {
 
 main section:nth-of-type(1) p {
     font-family: maven_pro;
+
+    margin: 1em auto;
 }
 
 main section:nth-of-type(2) img {
-    margin: 300px 0px 45px 0px;
+    margin: 300px auto 45px auto;
     border-radius: 15px 15px;
 }
 
@@ -136,7 +144,7 @@ main section:nth-of-type(2) p {
 }
 
 main section:nth-of-type(3) img {
-    margin: 300px 0px 45px 0px;
+    margin: 300px auto 45px auto;
     border-radius: 15px 15px;
 }
 
